--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,11 +6,8 @@ name: Node CI
 on: [push]
 
 jobs:
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
 
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,9 +16,14 @@ jobs:
         run: |
           npm install
           npm run build
-
+      
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
+          
   test:
-
+    needs: build
     runs-on: ubuntu-latest
 
     strategy:
@@ -31,6 +33,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
