--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -5,3 +5,11 @@ on: pull_request_review
 jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
+    
+    steps:
+      - name: label-when-approved-action
+      - uses: pullreminders/label-when-approved-action@master
+      - env:
+          APPROVALS: "1"
+          GITHUB_TOKEN: ${{github_token}}
+          ADD_LABEL: "GA_Approval_Label"
