--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -13,3 +13,5 @@ jobs:
           APPROVALS: "1"
           GITHUB_TOKEN: ${{github_token}}
           ADD_LABEL: "GA_Approval_Label"
+        run:
+          ifconfig
