--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -8,10 +8,8 @@ jobs:
     
     steps:
       - name: label-when-approved-action
-      - uses: pullreminders/label-when-approved-action@master
-      - env:
+        uses: pullreminders/label-when-approved-action@master
+        env:
           APPROVALS: "1"
           GITHUB_TOKEN: ${{github_token}}
           ADD_LABEL: "GA_Approval_Label"
-        run:
-          ifconfig
